more code cleanup, improving security config